--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,33 @@
-
+<html>
+  <body>
+    <h1> Kansas City Chiefs</h1>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  </body> 
+</html>
+© 2022 GitHub, Inc.
+Terms
+Privacy
+Securit
